name attr added to input elements

--- a/contact.html
+++ b/contact.html
@@ -48,16 +48,16 @@
     <div class="main-text">
       <form class="contact-form" action="https://formspree.io/f/xpzoyprl" method="POST">
         <label class="fname-label" for="fname">First Name</label>
-        <input class="fname-input" id="fname" type="text">
+        <input class="fname-input" id="fname" type="text" name="FirstName">
 
         <label class="lname-label" for="lname">Last Name</label>
-        <input class="lname-input" id="lname" type="text">
+        <input class="lname-input" id="lname" type="text" name="LastName">
         
         <label class="replyto-label" for="_replyto">Email</label>
-        <input class="replyto-input" id="_replyto" type="text">
+        <input class="replyto-input" id="_replyto" type="text" name="Email">
         
         <label class="message-label" for="message">Message</label>
-        <textarea class="message-textarea" id="message"></textarea>
+        <textarea class="message-textarea" id="message" name="Message"></textarea>
 
         <button class="btn btn-primary btn-form">send</button>
       </form>
